# VitusOS-Ares

./: .gitignore  .gitmessage  .gitmodules  AGENTS.md  AUDIT_REPORT_CURRENT.md  AUDIT_REPORT_JAN_2026.md  CMakeLists.txt  LICENSE  LINUX_VALIDATION.md  NIXOS_IDE_SETUP.md  README.md  SETUP_REMOTE_NIX.md  SYSTEM_AUDIT.md  TESTING_GUIDE.md  TOMORROW_SESSION.md  VitusOS Ares.md  flake.nix  nixos-configuration.nix  openSEF Architecture R&D.md  openSEF Architecture R&D.md.resolved  openSEF Design Reference.md  run_force.sh  run_nixos.sh  run_shell.sh  run_vitus_ares.sh  shell.nix  vitus-display.xlaunch
apps/seadrop/: CMakeLists.txt
apps/seadrop/include/: SeaDrop.h  SeaDropSettings.h
apps/seadrop/resources/: seadrop.desktop
apps/seadrop/src/: SeaDropApp.cpp  SeaDropSettings.cpp  SeaDropTray.cpp  SeaDropWindow.cpp  main.cpp
apps/vitus-filer/: CMakeLists.txt
apps/vitus-filer/include/: Filer.h
apps/vitus-filer/resources/: vitus-filer.desktop
apps/vitus-filer/src/: FilerApp.cpp  main.cpp
apps/vitus-installer/: CMakeLists.txt
apps/vitus-installer/include/: Installer.h
apps/vitus-installer/resources/: vitus-installer.desktop
apps/vitus-installer/src/: AccountPage.cpp  CustomizePage.cpp  DiskPage.cpp  InstallPage.cpp  InstallerApp.cpp  WelcomePage.cpp  main.cpp
apps/vitus-terminal/: CMakeLists.txt
apps/vitus-terminal/include/: Terminal.h
apps/vitus-terminal/resources/: vitus-terminal.desktop
apps/vitus-terminal/src/: TerminalApp.cpp  main.cpp
opensef/: CMakeLists.txt
opensef/apps/: CMakeLists.txt
opensef/apps/osf-filer/: CMakeLists.txt
opensef/apps/osf-filer-native/: CMakeLists.txt  Filer.qml  FilerController.cpp  FilerController.h  main.cpp
opensef/apps/osf-lockscreen/: CMakeLists.txt  OSFPasswordField.cpp  OSFPasswordField.h  main.cpp
opensef/apps/osf-settings/: CMakeLists.txt
opensef/apps/osf-terminal/: CMakeLists.txt
opensef/include/: opensef.h
opensef/opensef-appkit/: CMakeLists.txt
opensef/opensef-appkit/src/: OSFButton.cpp  OSFButton.m  OSFGlassPanel.cpp  OSFLabel.cpp  OSFMenu.m  OSFTextField.cpp  OSFTilingManager.cpp  OSFTitleBar.cpp  OSFView.cpp  OSFView.m  OSFWidgets.cpp  OSFWidgets.m  OSFWindow.cpp  OSFWindow.m  OSFWindowButton.cpp  VulkanTextRenderer.cpp
opensef/opensef-auth/: CMakeLists.txt
opensef/opensef-auth/include/: OSFAuth.h
opensef/opensef-auth/src/: OSFAuth.cpp
opensef/opensef-backend/: CMakeLists.txt
opensef/opensef-backend/src/: OSFBackend.cpp  OSFBackend.m  OSFTextRenderer.cpp  OSFVulkanRenderer.cpp  OSFVulkanRenderer.m  OSFWaylandSurface.cpp  OSFWaylandSurface.m
opensef/opensef-base/: CMakeLists.txt
opensef/opensef-base/src/: OSFAnimation.cpp  OSFApplication.cpp  OSFAresTheme.cpp  OSFArray.m  OSFBundle.cpp  OSFLayer.cpp  OSFNotificationCenter.cpp  OSFObject.cpp  OSFObject.m  OSFRunLoop.cpp  OSFShortcutManager.cpp  OSFStackView.cpp  OSFString.m  OSFView.cpp  OSFWindow.cpp
opensef/opensef-compositor/: CMakeLists.txt
opensef/opensef-compositor/include/: OSFAnimations.h  OSFAresTheme.h  OSFCompositor.h  OSFCursor.h  OSFDecorations.h  OSFDesktopLayers.h  OSFDisplayLink.h  OSFDock.h  OSFKeyboard.h  OSFLayer.h  OSFLockScreen.h  OSFMenuBar.h  OSFOutput.h  OSFResponder.h  OSFSceneDock.h  OSFSceneMenuBar.h  OSFSceneWallpaper.h  OSFShutdownScreen.h  OSFTextRenderer.h  OSFTransaction.h  OSFView.h  OSFWallpaper.h  OSFWelcomeScreen.h  OSFWindowDecorations.h  OSFWorkspaceView.h  OSFXWayland.h  multitask.h  server.h  stb_image.h  tiling.h  titlebar.h  wlr_compat.h
opensef/opensef-compositor/legacy_cpp/: OSFBackend.cpp  OSFCompositor.cpp  OSFCursor.cpp  OSFDecorations.cpp  OSFDesktopLayers.cpp  OSFDisplayLink.cpp  OSFKeyboard.cpp  OSFLayer.cpp  OSFLockScreen.cpp  OSFMenuBar.cpp  OSFResponder.cpp  OSFSceneDock.cpp  OSFSceneMenuBar.cpp  OSFSceneWallpaper.cpp  OSFShutdownScreen.cpp  OSFTextRenderer.cpp  OSFTransaction.cpp  OSFView.cpp  OSFVulkanRenderer.cpp  OSFVulkanRenderer.h  OSFWallpaper.cpp  OSFWaylandSurface.cpp  OSFWelcomeScreen.cpp  OSFWindowDecorations.cpp  OSFWorkspaceView.cpp  OSFXWayland.cpp  main.cpp
opensef/opensef-compositor/src/: OSFAnimations.cpp  OSFCompositor.cpp  OSFDecorations.cpp  OSFDock.cpp  OSFOutput.cpp  OSFSceneMenuBar.cpp  OSFSceneWallpaper.cpp  OSFWorkspaceView.cpp  decorations.c  input.c  layer_shell.c  main.c  multitask.c  output.c  popup.c  server.c  tiling.c  titlebar.c  view.c  wlr_compat.c
opensef/opensef-core/: CMakeLists.txt
opensef/opensef-core/include/: OSFAnimation.h  OSFLayer.h
opensef/opensef-core/src/: OSFAnimation.cpp  OSFLayer.cpp
opensef/opensef-framework/: CMakeLists.txt
opensef/opensef-framework/include/: OSFClipboard.h  OSFDesktop.h  OSFEventBus.h  OSFFrameworkC.h  OSFResourceCache.h  OSFServiceRegistry.h  OSFShortcutManager.h  OSFStateManager.h  OSFThemeManager.h  OSFWindowManager.h
opensef/opensef-framework/src/: OSFAnimationEngine.cpp  OSFClipboard.cpp  OSFDesktop.cpp  OSFEventBus.cpp  OSFFrameworkC.cpp  OSFPathfinder.cpp  OSFResourceCache.cpp  OSFServiceRegistry.cpp  OSFShortcutManager.cpp  OSFStateManager.cpp  OSFThemeManager.cpp  OSFWindowManager.cpp
opensef/opensef-gnustep/: CMakeLists.txt
opensef/opensef-gnustep/bridge/: QQuickNSButton.cpp  QQuickNSButton.h  QQuickWindowButton.cpp  QQuickWindowButton.h
opensef/opensef-gnustep/src/: NSButton.cpp  NSControl.cpp  NSView.cpp  NSWindowButton.cpp
opensef/opensef-shell/: CMakeLists.txt
opensef/opensef-shell-qt/: CMakeLists.txt  resources.qrc
opensef/opensef-shell-qt/qml/: AresPanel.qml  BootSplash.qml  Dock.qml  DropdownMenu.qml  Main.qml  Multitask.qml  Panel.qml  Pathfinder.qml  Shell.qml  SystemTray.qml  Wallpaper.qml
opensef/opensef-shell-qt/src/: AnimationEngineController.cpp  AnimationEngineController.h  DBusMenuImporter.cpp  DBusMenuImporter.h  DockController.cpp  DockController.h  IconProvider.h  MultitaskController.cpp  MultitaskController.h  PanelController.cpp  PanelController.h  main.cpp  (+4 more)
opensef/opensef-ui/: CMakeLists.txt
opensef/test/: CMakeLists.txt  hello-window.cpp  hello-window.m  phase1-minimal.cpp  phase1_validation.cpp  phase2_window.cpp  phase3_app.cpp  welcome-screen.cpp
(+110 files in other folders)
